# visualsynth

./: Cargo.toml  README.md
resources/config/: settings.yaml
src/: lib.rs  main.rs
src/graphics/: mod.rs  shader.wgsl  state.rs  uniforms.rs  vertex.rs
src/synth/: adsr_envelope.rs  audiobuffer.rs  mod.rs  modulator.rs  node.rs  oscillator.rs  tremolo.rs  utils.rs  waveform_generator.rs
src/synth/keys/: key_detector.rs  keys.rs  mod.rs  note_state.rs
